--- a/DAY-1/resume.html
+++ b/DAY-1/resume.html
@@ -10,7 +10,7 @@
     <section>
         <table cellpadding=10px align="center" >
             <tr align="center">
-                <td rowspan="5" ><img src="../resume photo.jpg" style="border-radius: 50pc;" height="200"></td>
+                <td rowspan="5" ><img src="./resume photo.jpg" style="border-radius: 50pc;" height="200"></td>
                 <td><h1>Praveen Pasupuleti</h1> 
                 <p>Hyderadad, India | 9703152778 |praveenpasupulleti@gmail.com</p>
                 <a href="#github">GitHub</a>
